# GPT-Spotlight

./: .gitignore  CMakeLists.txt  README.md  commands.json  main.cpp  openai.json
